deployments/k8s/production/booking.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: booking-service
  namespace: production
spec:
  replicas: 2 # Chạy 2 Pod để phân phối tải
  selector:
    matchLabels:
      app: booking-service
  template:
    metadata:
      labels:
        app: booking-service
    spec:
      containers:
      - name: booking-app
        image: lekhai123/booking-service:latest
        ports:
        - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: booking-service
  namespace: production
spec:
  ports:
  - port: 8081
    targetPort: 8081
  selector:
    app: booking-service
