deployments/k8s/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: production-ingress
  namespace: production
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false" # Bật thành true nếu cấu hình SSL/TLS sau này
spec:
  rules:
  - host: bookinghotel.local # Tên miền chính thức cho Production
    http:
      paths:
      - path: /api/v1/identity
        pathType: Prefix
        backend:
          service:
            name: identity-service
            port:
              number: 8080
      - path: /api/v1/booking
        pathType: Prefix
        backend:
          service:
            name: booking-service
            port:
              number: 8081
